# optmux

./: .gitignore  CLAUDE.md  README.md  example.optmux.yaml  optmux-defaults.yaml  optmux-tips.sh  optmux-tmux.conf  pyproject.toml
optmux/: __init__.py  cli.py
optmux/data/: optmux-defaults.yaml  plugins-setup.sh  plugins-update.sh  tips.sh  tmux-plugins-setup.sh  tmux.conf
tests/: conftest.py  test_e2e.py  test_generate_shortcut_line.py  test_generate_tmux_conf.py  test_load_config.py  test_main.py  test_merge_optmux.py  test_parse_project_name.py
tests/golden/: shortcuts-defaults.conf
