[project]
name = "optmux"
version = "0.1.1"
description = "Optimal, opinionated, batteries-included TMUX that's neat and easy for any project"
readme = "README.md"
authors = [
    { name = "Jaeho Shin", email = "netj@sparcs.org" }
]
license = "MIT"
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/netj/optmux#readme"
Repository = "https://github.com/netj/optmux.git"
Issues = "https://github.com/netj/optmux/issues"
dependencies = [
    "tmuxp",
]

[project.scripts]
optmux = "optmux.cli:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
