[project]
name = "optmux"
version = "0.2.1"
description = "Optimal, opinionated, batteries-included TMUX that's neat and easy for any project"
readme = "README.md"
authors = [
    { name = "Jaeho Shin", email = "netj@sparcs.org" }
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "tmuxp",
]

[project.urls]
Homepage = "https://github.com/netj/optmux#readme"
Repository = "https://github.com/netj/optmux.git"
Issues = "https://github.com/netj/optmux/issues"

[project.scripts]
optmux = "optmux.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring real tmux (deselect with '-m not e2e')",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
